--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <!-- <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar"> -->
     <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -19,11 +19,13 @@
     <style name="Mitoolbar" parent="ThemeOverlay.AppCompat.Light">
         <!-- Customize the popup theme here -->
         <item name="colorPrimary">@color/colorAccent</item>
+
     </style>
 
     <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
         <item name="background">@color/miFondo</item>
         <item name="android:textColor">@color/textColor</item>
+
     </style>
 
     <color name="miFondo">#045C97</color>
