Cambio del dobletap por el simple

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -23,4 +23,12 @@
         android:label="Detalle de la Casa"
         tools:layout="@layout/item_casa">
     </fragment>
+
+    <fragment
+        android:id="@+id/detalleAlquilerFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleCasaFragment"
+        android:label="Detalle de la Casa"
+        tools:layout="@layout/item_casa">
+    </fragment>
+
 </navigation>
