--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,10 +10,10 @@
         android:id="@+id/action_search"
         android:title="@string/search"
         android:orderInCategory="100"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
     <item
         android:id="@+id/action_favorite"
         android:title="@string/favorite"
         android:orderInCategory="100"
-        app:showAsAction="always" />
+        app:showAsAction="never" />
 </menu>
