--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -10,10 +10,9 @@
         android:name="com.aem.gestionalquileres.fragmentos.CasasFragment"
         android:label="Lista de Casas"
         tools:layout="@layout/fragment_casas">
-        <!-- Acción para navegar desde CasasFragment a ItemCasaFragment -->
         <action
             android:id="@+id/action_casasFragment_to_detalleCasaFragment"
-            app:destination="@id/detalleCasaFragment"/>
+            app:destination="@id/detalleCasaFragment" />
     </fragment>
 
     <!-- Fragmento de detalle de casa -->
@@ -22,38 +21,155 @@
         android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleCasaFragment"
         android:label="Detalle de la Casa"
         tools:layout="@layout/item_casa">
+        <action
+            android:id="@+id/action_detalleCasaFragment_to_casasFragment"
+            app:destination="@id/casasFragment"
+            app:popUpTo="@id/casasFragment"
+            app:popUpToInclusive="true" />
     </fragment>
 
-    <fragment
-        android:id="@+id/detalleAlquilerFragment"
-        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleCasaFragment"
-        android:label="Detalle de la Casa"
-        tools:layout="@layout/item_casa">
-    </fragment>
-
-    <!--
-    <fragment
-        android:id="@+id/detalleCasaFragment"
-        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleCasaFragment"
-        android:label="Detalle de Casa">
-        <action
-            android:id="@+id/action_to_alquileresFragment"
-            app:destination="@id/alquileresFragment" />
-        <action
-            android:id="@+id/action_to_recibosFragment"
-            app:destination="@id/recibosFragment" />
-        <! Define más acciones según sea necesario
-    </fragment> -->
-
+    <!-- Fragmento de alquileres -->
     <fragment
         android:id="@+id/alquileresFragment"
         android:name="com.aem.gestionalquileres.fragmentos.AlquileresFragment"
-        android:label="Alquileres" />
+        android:label="Alquileres"
+        tools:layout="@layout/fragment_alquileres">
+        <action
+            android:id="@+id/action_alquileresFragment_to_detalleAlquilerFragment"
+            app:destination="@id/detalleAlquilerFragment" />
+    </fragment>
 
+    <!-- Fragmento de detalle de alquiler -->
+    <fragment
+        android:id="@+id/detalleAlquilerFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleAlquilerFragment"
+        android:label="Detalle del Alquiler"
+        tools:layout="@layout/item_alquiler">
+        <action
+            android:id="@+id/action_detalleAlquilerFragment_to_alquileresFragment"
+            app:destination="@id/alquileresFragment"
+            app:popUpTo="@id/alquileresFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- Fragmento de contactos -->
+    <fragment
+        android:id="@+id/contactosFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.ContactosFragment"
+        android:label="Contactos"
+        tools:layout="@layout/fragment_contactos">
+        <action
+            android:id="@+id/action_contactosFragment_to_detalleContactoFragment"
+            app:destination="@id/detalleContactoFragment" />
+    </fragment>
+
+    <!-- Fragmento de detalle de contacto -->
+    <fragment
+        android:id="@+id/detalleContactoFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleContactoFragment"
+        android:label="Detalle de Contacto"
+        tools:layout="@layout/item_contacto">
+        <action
+            android:id="@+id/action_detalleContactoFragment_to_contactosFragment"
+            app:destination="@id/contactosFragment"
+            app:popUpTo="@id/contactosFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- Fragmento de empresas -->
+    <fragment
+        android:id="@+id/empresasFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.EmpresasFragment"
+        android:label="Empresas"
+        tools:layout="@layout/fragment_empresas">
+        <action
+            android:id="@+id/action_empresasFragment_to_detalleEmpresaFragment"
+            app:destination="@id/detalleEmpresaFragment" />
+    </fragment>
+
+    <!-- Fragmento de detalle de empresa -->
+    <fragment
+        android:id="@+id/detalleEmpresaFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleEmpresaFragment"
+        android:label="Detalle de Empresa"
+        tools:layout="@layout/item_empresa">
+        <action
+            android:id="@+id/action_detalleEmpresaFragment_to_empresasFragment"
+            app:destination="@id/empresasFragment"
+            app:popUpTo="@id/empresasFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- Fragmento de personas -->
+    <fragment
+        android:id="@+id/personasFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.PersonasFragment"
+        android:label="Personas"
+        tools:layout="@layout/fragment_personas">
+        <action
+            android:id="@+id/action_personasFragment_to_detallePersonaFragment"
+            app:destination="@id/detallePersonaFragment" />
+    </fragment>
+
+    <!-- Fragmento de detalle de persona -->
+    <fragment
+        android:id="@+id/detallePersonaFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetallePersonaFragment"
+        android:label="Detalle de Persona"
+        tools:layout="@layout/item_persona">
+        <action
+            android:id="@+id/action_detallePersonaFragment_to_personasFragment"
+            app:destination="@id/personasFragment"
+            app:popUpTo="@id/personasFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- Fragmento de recibos -->
     <fragment
         android:id="@+id/recibosFragment"
         android:name="com.aem.gestionalquileres.fragmentos.RecibosFragment"
-        android:label="Recibos" />
+        android:label="Recibos"
+        tools:layout="@layout/fragment_recibos">
+        <action
+            android:id="@+id/action_recibosFragment_to_detalleReciboFragment"
+            app:destination="@id/detalleReciboFragment" />
+    </fragment>
 
+    <!-- Fragmento de detalle de recibo -->
+    <fragment
+        android:id="@+id/detalleReciboFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleReciboFragment"
+        android:label="Detalle de Recibo"
+        tools:layout="@layout/item_recibo">
+        <action
+            android:id="@+id/action_detalleReciboFragment_to_recibosFragment"
+            app:destination="@id/recibosFragment"
+            app:popUpTo="@id/recibosFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <!-- Fragmento de servicios -->
+    <fragment
+        android:id="@+id/serviciosFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.ServiciosFragment"
+        android:label="Servicios"
+        tools:layout="@layout/fragment_servicios">
+        <action
+            android:id="@+id/action_serviciosFragment_to_detalleServicioFragment"
+            app:destination="@id/detalleServicioFragment" />
+    </fragment>
+
+    <!-- Fragmento de detalle de servicio -->
+    <fragment
+        android:id="@+id/detalleServicioFragment"
+        android:name="com.aem.gestionalquileres.fragmentos.detalles.DetalleServicioFragment"
+        android:label="Detalle de Servicio"
+        tools:layout="@layout/item_servicio">
+        <action
+            android:id="@+id/action_detalleServicioFragment_to_serviciosFragment"
+            app:destination="@id/serviciosFragment"
+            app:popUpTo="@id/serviciosFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 
 </navigation>
